# aws-silicon-valley-workflow-workshop

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  workshop_content.md
.github/workflows/: ci.yml
docs/: certificate-verification.md  instructor-guide.md  participant-quickstart.md  repository-settings.md  troubleshooting-aws-docker-lambda.md  troubleshooting-python-uv-fastapi.md  troubleshooting-wsl-git.md  workshop-roadmap.md
sessions/01-the-hacker-setup/: README.md
sessions/02-python-fastapi/: README.md  main.py  pyproject.toml  test_main.py
sessions/03-cloud-access/: README.md
sessions/04-final-production-launch/: .env.example  CLEANUP.md  README.md  pyproject.toml  test_main.py
tools/: check_markdown_links.py  check_public_safety.py
tools/certificate-generator/: README.md
