[project]
name = "sentiment-api"
version = "0.1.0"
description = "Containerized FastAPI sentiment API deployment demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "mangum>=0.19.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "vadersentiment>=3.3.2",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
]

[tool.setuptools]
py-modules = ["main"]
